==> GitLaughs/See-you-more-than-her/WHEELTEC_C50X_2025.12.26/USB_HOST/Target/usbh_conf.c <==
#include "usbh_core.h"

void HAL_HCD_MspInit(HCD_HandleTypeDef* hcdHandle)
{
//  GPIO_InitTypeDef GPIO_InitStruct = {0};
//  if(hcdHandle->Instance==USB_OTG_FS)
//  {
//  /* USER CODE BEGIN USB_OTG_FS_MspInit 0 */

//  /* USER CODE END USB_OTG_FS_MspInit 0 */

//    __HAL_RCC_GPIOA_CLK_ENABLE();
//    /**USB_OTG_FS GPIO Configuration
//    PA11     ------> USB_OTG_FS_DM
//    PA12     ------> USB_OTG_FS_DP
//    */
//    GPIO_InitStruct.Pin = GPIO_PIN_11|GPIO_PIN_12;
//    GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
//    GPIO_InitStruct.Pull = GPIO_NOPULL;
//    GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
//    GPIO_InitStruct.Alternate = GPIO_AF10_OTG_FS;
//    HAL_GPIO_Init(GPIOA, &GPIO_InitStruct);

//    /* Peripheral clock enable */
//    __HAL_RCC_USB_OTG_FS_CLK_ENABLE();

//    /* Peripheral interrupt init */
//    HAL_NVIC_SetPriority(OTG_FS_IRQn, 5, 0);
//    HAL_NVIC_EnableIRQ(OTG_FS_IRQn);
//  /* USER CODE BEGIN USB_OTG_FS_MspInit 1 */

//  /* USER CODE END USB_OTG_FS_MspInit 1 */
//  }

	GPIO_InitTypeDef  GPIO_InitStructure;
	
	//TOOD:USB FS设备时钟必须配置为48M
	RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_GPIOA, ENABLE);//使能GPIOA时钟
	RCC_AHB2PeriphClockCmd(RCC_AHB2Periph_OTG_FS, ENABLE);//使能USB OTG时钟	
	//GPIOA11,A12设置
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_11 | GPIO_Pin_12;//PA11/12复用功能输出	
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF;//复用功能
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_100MHz;//100MHz
	GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_NOPULL; 
	GPIO_Init(GPIOA, &GPIO_InitStructure);//初始化

	GPIO_PinAFConfig(GPIOA,GPIO_PinSource11,GPIO_AF_OTG_FS);//PA11,AF10(USB)
	GPIO_PinAFConfig(GPIOA,GPIO_PinSource12,GPIO_AF_OTG_FS);//PA12,AF10(USB)
	
	//NVIC 配置
	NVIC_InitTypeDef NVIC_InitStructure;
	NVIC_InitStructure.NVIC_IRQChannel = OTG_FS_IRQn;
	NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority=5; //抢占优先级
	NVIC_InitStructure.NVIC_IRQChannelSubPriority =0;		//子优先级
	NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;			//IRQ通道使能
	NVIC_Init(&NVIC_InitStructure);
}

void HAL_HCD_MspDeInit(HCD_HandleTypeDef* hcdHandle)
{
//  if(hcdHandle->Instance==USB_OTG_FS)
//  {
//  /* USER CODE BEGIN USB_OTG_FS_MspDeInit 0 */

//  /* USER CODE END USB_OTG_FS_MspDeInit 0 */
//    /* Peripheral clock disable */
//    __HAL_RCC_USB_OTG_FS_CLK_DISABLE();

//    /**USB_OTG_FS GPIO Configuration
//    PA11     ------> USB_OTG_FS_DM
//    PA12     ------> USB_OTG_FS_DP
//    */
//    HAL_GPIO_DeInit(GPIOA, GPIO_PIN_11|GPIO_PIN_12);

//    /* Peripheral interrupt Deinit*/
//    HAL_NVIC_DisableIRQ(OTG_FS_IRQn);

//  /* USER CODE BEGIN USB_OTG_FS_MspDeInit 1 */

//  /* USER CODE END USB_OTG_FS_MspDeInit 1 */
//  }
	GPIO_InitTypeDef  GPIO_InitStructure;
	RCC_AHB2PeriphClockCmd(RCC_AHB2Periph_OTG_FS, DISABLE);
	RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_GPIOA, DISABLE);
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_11 | GPIO_Pin_12;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IN;
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_100MHz;//100MHz
	GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_NOPULL; 
	GPIO_Init(GPIOA, &GPIO_InitStructure);//初始化
}
